# src/creational/prototype/wheel.ts
@@ -1,0 +1,6 @@
+import {ClonableInterface} from "./clonable.interface";
+
+export abstract class Wheel implements ClonableInterface {
+    diameter: number;
+    abstract clone(): ClonableInterface;
+}
